# a-visualization

./: .flake8  pyproject.toml
src/a_visualization/anomaly_detector/: main.py
src/a_visualization/auto_encoder/: main.py
src/a_visualization/foa/: main.py
src/a_visualization/logistic_regression/: main.py
src/a_visualization/others/: bayes_error.py
src/a_visualization/over_sampling/: borderline_smote.py  harsh_oversampling.py  k1_k2_borderline_smote.py
src/a_visualization/random_forest/: pattern_indistinguishable.py
src/a_visualization/svm/: cases_of_classification.py  cases_of_fraud_distribution.py  main.py  rbf_kernel.py
